# embedded-fmt

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
include/embedded-fmt/: efmt.hpp
src/: efmt.hpp  main.cpp
tests/: CMakeLists.txt  basic_bin.cpp  basic_formatting.cpp  basic_hex.cpp  basic_oct.cpp  edge_tests.cpp  simple_tests.cpp  test_arrays.cpp  tester.cpp
